--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,8 +7,13 @@ spring:
     properties:
       hibernate:
         format_sql: true
+    generate-ddl: false
     hibernate:
-      ddl-auto: update
-
+      ddl-auto: create-drop
+  datasource:
+    url: jdbc:mysql://localhost:3306/book_manager
+    hikari:
+      username: root
+      password: a1s2d3A!S@
 server:
   port: 8070
